--- a/class/slider.css
+++ b/class/slider.css
@@ -28,13 +28,13 @@ pre + h2{
 }
 
 #container{
-	position:relative;
-	right:50%;
-	left:400px;
+	width:800px;
 	font-family: "Source Code Pro", monospace;
 	display: block;
 	margin-left:auto;
-	margin-right:auto;}
+	margin-right:auto;
+	margin-bottom:60px;
+}
 
 #banner-fade,
 #banner-slide{
